--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,11 @@
 </dependency>
     
     
-    
+  <dependency>
+    <groupId>com.codeborne</groupId>
+    <artifactId>phantomjsdriver</artifactId>
+    <version>1.5.0</version>
+</dependency>
         
      
   </dependencies>
